[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/UI/Inventory/newInventory/EquipSlots.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/Inventory/newInventory/InvEquipSlot1.tscn" type="PackedScene" id=2]

[node name="EquipSlots" type="Control" groups=["active_character"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -720.0
margin_bottom = -1440.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="M" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="M"]
margin_right = 360.0
margin_bottom = 480.0
custom_constants/separation = 0

[node name="InvEquipSlot1" parent="M/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 240.0

[node name="InvEquipSlot2" parent="M/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 240.0
margin_right = 360.0
margin_bottom = 480.0

[connection signal="ItemSet" from="M/VBoxContainer/InvEquipSlot1" to="." method="_on_ItemSet"]
[connection signal="ItemSet" from="M/VBoxContainer/InvEquipSlot2" to="." method="_on_ItemSet"]
